Tests that catch named bugs: new testing rules, a pruned suite, and #102's groundedness tests (#122)
## Summary

Tests in this repo often confirmed the code they sat next to instead of
catching bugs. This PR changes the rules for writing tests, then applies
them to the existing suite and to the groundedness classifier from #102.
Every new or rewritten test was shown to fail when the bug it names was
planted, and to pass once the plant was removed.

### New rules (`AGENTS.md`)
- Root `## Tests` replaces "do not add or modify tests unless
requested":
- expected values come from the requirement, not from running the code;
  - write the test first and watch it fail;
  - every test names the bug it catches;
  - never weaken a test to get green.
- `backend/AGENTS.md` and `frontend/AGENTS.md` say how to write them:
  - assert state, not mock calls;
  - real object, then fake, then mock;
  - inject a `Clock` instead of sleeping;
  - compare exact values;
  - test what the user sees.

### Suites no gate ran now run per PR
- `contract/tests` (the offline rules half of
`check-vendored-plugin.sh`), `packages/mcp`, and `classifiers/tests`.
- Three gate scripts passed on broken input and now fail:
  - `blob-links` with zero links;
  - `classifier-quality-doc` with a missing page;
  - `groundedness-setup` accepting `sha256sum --check || true`.

### Existing suite pruned
- Removed tests that caught nothing: restated constants, no assertion,
private-field reads, duplicates.
- Rewrote tests that could not fail on their own bug: status-only
asserts, fixtures that could not tell two values apart, real sleeps.
- Added regression tests for fixes that shipped without one: #62, #109,
#115, and keeping a secret-leak case open.
- Added tests for gaps mutation testing exposed, for example RCA usage
booking and ingest back-pressure refusal.

### #102 groundedness tests
Planted bugs in #102's code mostly went unnoticed. The fixes:
- **serve.py:** tests for slot release after a failed call, 400 